syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message StoreChunk {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
    message Port {
        int32 portNum = 1;
    }
    repeated Port portID = 4;
}

message RetrieveFile {
    string fileName = 1;
}
